2000-04-21  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (owner_done): Handle new return from
	Bf::parse.  Build an intelligible message from all of the data we
	have available.

	* lib/Bf/Parser.pm (parse): Redo data passing.  Return information
	gleaned from envelope as well as hashref to data pulled from
	parsed bounces.
	(parse_dsn): Clean up and return bad address instead of complete
	content of final-/original-recipient line.

	* lib/Mj/MailOut.pm (owner_start): Name temp files $tmp/owner.*
	instead of $tmp/post.*.

2000-04-20  Michael Yount  <csf@moscow.com>

	* lib/Mj/CommandProps.pm, lib/Majordomo.pm:
	Tighten access to the "set" and "show" commands.  The new
	"default user" feature makes it possible not only to assume
	someone's identity, but also to see the result of commands
	that are issued.  Add list_access_check to the "set" core
	function, and change the default access for the "show"
	command from "mismatch" to "confirm."

	* lib/Mj/Token.pm:
	Add sanity checks for reminders:  if token_remind is unset,
	negative, or greater than token_lifetime, do not send a reminder.

2000-04-20  SRE  <eckert@climber.org>

	* README, README.QUICKSTART:
	improved notes about which Perl modules are required to install,
	and where/how to get them

2000-04-20  Michael Yount  <csf@moscow.com>

	* lib/Mj/Format.pm, lib/Mj/Parser.pm, lib/Majordomo.pm:
	Implement sample "unregister-replace" command, which allows one
	address to be replaced by another in the registry.

	Add "user" to the supported actions for the default command.
	This allows the address from the From: or Apparently-From: header
	to be overridden.

2000-04-19  SRE  <eckert@climber.org>

	* files/en/help/faq, files/en/help/get, files/en/help/info, files/en/help/intro, files/en/help/put, files/en/help/rekey, files/en/help/admin, files/en/help/admin_commands, files/en/help/configset_tmpdir:
	noted 'get-immediate' option, fixed obsolete references to 'filesync'

	* setup/setup_func.pl: