@@ -1,3 +1,12 @@
+2000-05-02  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Mj/Config.pm (parse_access_rules): Extract the classes
+        defined in taboo and admin rules and pass them into _compile_rule
+        so they can be listed as legal variables.
+	(_compile_rule): Don't blindly match against (admin|taboo)_ for
+	legal variables; use the hash of variables passed in to us
+	instead.
+
 2000-04-21  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
 
 	* lib/Mj/MailOut.pm (owner_done): Handle new return from
